# emotion-machine-interview

./: .gitignore  Dockerfile  README.md  docker-compose.yml  local.env  pyproject.toml
backend/: main.py
data/: gorilla_openfunctions_v1_manual_test.json  gorilla_openfunctions_v1_manual_test_cross.json  gorilla_openfunctions_v1_manual_test_hard.json  gorilla_openfunctions_v1_manual_test_medium.json
discovery/: test_dataset_exploration.ipynb  train_dataset_exploration.ipynb
docs/: design.md  modules.md  setup.md  workflow.md
evaluation/: evaluate.py  mismatches_manual_cross.jsonl  mismatches_manual_easy.jsonl  mismatches_manual_hard.jsonl  mismatches_manual_medium.jsonl  test_search_index_db.py
frontend/: index.html  script.js  styles.css
src/: client.py  context_segmenter.py  embedder.py  environment.py  executor.py  indexer.py  logger.py  planner.py  request_logging_wrapper.py  reranker.py  utils.py
tests/: conftest.py  test_context_segmenter.py  test_executor.py  test_indexer_unit.py  test_planner.py  test_request_logging_wrapper.py  test_reranker.py  test_search_index_db.py  test_utils_unit.py
timing/: run_timings.py
